cmake_minimum_required(VERSION 3.16)
project(CPP)

set(CMAKE_CXX_STANDARD 14)

add_executable(CPP ArrayRotation.cpp)
add_executable(OldSchoolGCD.cpp OldSchoolGCD)
add_executable(GCDUsingSubtraction.cpp GCDUsingSubtraction)
add_executable(GCDUsingModulo.cpp GCDUsingModulo)
add_executable(MatrixMultiplication.cpp MatrixMultiplication)